--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,6 +26,9 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+    - name: Restore npm cache
+      run: npm cache verify
+    - name: Install dependencies
+      run: npm ci
     - name: Execute unit tests
-    - run: npm ci
-    - run: npm run test
+      run: npm run test
